# cmake_project

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  blah.cpp  blah.h  hello.cpp  hello.h  main.cpp
tests/: CMakeLists.txt  test_blah.cpp
